minor layout bug fixed v2

--- a/app/assets/stylesheets/register.scss
+++ b/app/assets/stylesheets/register.scss
@@ -12,8 +12,11 @@
   padding: 5px 30px;
   margin-top: 30px;
   color: #331670;
-  margin-left: 30px;
   border: none;
+}
+
+.actions {
+  width: 100%;
 }
 
 .btn-redirect {
@@ -21,13 +24,9 @@
   border: none;
 }
 
-.d-flex {
-  border-right: 1px solid #fff;
-}
-
 .white-link {
   color: #fff;
-  padding-left: 30px;
+  
 }
 
 .white-link:hover {
@@ -42,12 +41,11 @@
 .sign-up {
   text-align: center;
   margin-bottom: 30px;
-  padding-left: 30px;
+  
 }
 
-.company-name {
-  margin-bottom: 30px;
-}
+
+
 
 .forgot-password {
   padding: 15% 0;
